--- a/index.html
+++ b/index.html
@@ -5,18 +5,12 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <div id ="navigation">
-    <div id="left">
       <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Store</a></li>
+        <li class="left"><a href="#">About</a></li>
+        <li class="left"><a href="#">Store</a></li>
+        <li class="right"><a href="#">Gmail</a></li>
+        <li class="right"><a href="#">Images</a></li>
       </ul>
-    </div>
-    <div id="right">
-        <ul>
-            <li><a href="#">Gmail</a></li>
-            <li><a href="#">Images</a></li>
-          </ul>
-    </div>
   </div>
   <div id="content">
     <img src="images/googlelogo_color_272x92dp.png" alt="Google Logo" id="logo">
