--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Google</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
-  <div id ="navigation">
+  <div class ="navigation">
       <ul>
         <li class="left"><a href="#">About</a></li>
         <li class="left"><a href="#">Store</a></li>
@@ -13,9 +13,12 @@
       </ul>
   </div>
   <div id="content">
-    <img src="images/googlelogo_color_272x92dp.png" alt="Google Logo" id="logo">
+    <img src="images/googlelogo_color_272x92dp.png" alt="Google Logo" class="center logo">
     <input type="text" name="search" id="search">
     <button type="button">Google Search</button> 
     <button type="button">I'm Feeling Lucky</button>
+  </div>
+  <div id="footer1" class="footer"> 
+    <p>Australia</p>
   </div>
 </html>
