--- a/index.html
+++ b/index.html
@@ -14,11 +14,19 @@
   </div>
   <div id="content">
     <img src="images/googlelogo_color_272x92dp.png" alt="Google Logo" class="center logo">
-    <input type="text" name="search" id="search">
-    <button type="button">Google Search</button> 
-    <button type="button">I'm Feeling Lucky</button>
+    <input type="text" name="search" class="search">
+    <div id="buttons" class="center">
+      <button type="button" class="commit">Google Search</button> 
+      <button type="button" class="commit">I'm Feeling Lucky</button>
+   </div>
   </div>
-  <div id="footer1" class="footer"> 
-    <p>Australia</p>
+  <div id="footer2" class="navigation footer"> 
+    <ul>
+      <li class="left"><a href="#">Advertising</a></li>
+      <li class="left"><a href="#">Business</a></li>
+      <li class="right"><a href="#">Privacy</a></li>
+      <li class="right"><a href="#">Terms</a></li>
+      <li class="right"><a href="#">Settings</a></li>
+    </ul>
   </div>
 </html>
